<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cshareApp"
        android:title="@string/shareapp" />
    <item
        android:id="@+id/more_apps"
        android:title="@string/more_apps" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/share_location"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/wikipedia"
        android:icon="@drawable/wikipedia"
        android:title="@string/wikipediasearch"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always" />
</menu>